# LocalMind

./: .editorconfig  .gitignore  .localpilot.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  vision.md
.cargo/: config.toml
.claude/: plan-template-overrides.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
crates/localmind-cli/: Cargo.toml
crates/localmind-cli/src/: graph.rs  ingest.rs  main.rs  mcp.rs  skill_actions.rs  store_root.rs  sync.rs  ui.rs
crates/localmind-cli/src/ui/: index.html
crates/localmind-cli/src/ui/css/: localmind.css
crates/localmind-cli/src/ui/js/: app.js  graph.js
crates/localmind-cli/src/ui/js/views/: audit.js  dashboard.js  docs.js  memory.js  review.js  skills.js
crates/localmind-cli/tests/: help.rs  import.rs  status.rs
crates/localmind-codegraph/: Cargo.toml
crates/localmind-codegraph/src/: boundary.rs  impact.rs  ingest.rs  join.rs  language.rs  lib.rs  overview.rs  parse.rs  primer.rs  provider.rs  reindex.rs  resolve.rs  staleness.rs  tags.rs
crates/localmind-codegraph/tests/: edges.rs  impact.rs  multilang_extraction.rs  multilang_reindex.rs  overview.rs  primer_review.rs
crates/localmind-core/: Cargo.toml
crates/localmind-core/src/: adapter.rs  audit.rs  context.rs  error.rs  evidence.rs  graph.rs  inference.rs  lesson.rs  lib.rs  memory.rs  review.rs  session.rs  skill.rs  summary.rs  sync.rs
crates/localmind-inference/: Cargo.toml
crates/localmind-inference/src/: lib.rs
crates/localmind-mcp/: Cargo.toml
crates/localmind-mcp/src/: catalog.rs  graph.rs  lib.rs  skills.rs
crates/localmind-review/: Cargo.toml
crates/localmind-review/src/: lib.rs
crates/localmind-search/: Cargo.toml
crates/localmind-search/src/: lib.rs  rank.rs  rerank.rs  workspace.rs
crates/localmind-search/tests/: global_vector_retrieval.rs  rerank_lift.rs  workspace_search.rs
crates/localmind-search/tests/fixtures/: retrieval-rerank.json
crates/localmind-skills/: Cargo.toml
crates/localmind-skills/src/: lib.rs
crates/localmind-store/: Cargo.toml
crates/localmind-store/src/: bundle.rs  bundle_import.rs  config.rs  context_export.rs  dedup.rs  doc_ingest.rs  eval.rs  extraction.rs  freshness.rs  graph_store.rs  import.rs  language.rs  lib.rs  markdown.rs  memory_persistence.rs  okf.rs  okf_export.rs  okf_import.rs  paths.rs  project_identity.rs  quality.rs  redaction.rs  research.rs  revalidation.rs  review_modes.rs  review_queue.rs  schema.rs  signing.rs  skill_drafts.rs  skill_proposals.rs  sync_bundle.rs  sync_engine.rs
crates/localmind-store/tests/: bundle_roundtrip.rs  contradiction_provenance.rs  doc_search_diagnostics.rs  dogfood_corpus.rs  embeddings.rs  extraction_fixture.rs  freshness_pass.rs  global_scope.rs  lifecycle_acceptance.rs  memory_quality_eval.rs  okf_conformance.rs  semantic_dedup.rs  source_revalidation.rs  supersede.rs  sync_e2e.rs  sync_folder.rs  sync_scoping.rs  usage_tracking.rs
crates/localmind-store/tests/fixtures/: coding-session.txt
crates/localmind-store/tests/fixtures/okf/ga4-shaped/: PROVENANCE.txt  index.md
crates/localmind-store/tests/fixtures/okf/ga4-shaped/datasets/: ga4_sample.md  index.md
crates/localmind-store/tests/fixtures/okf/ga4-shaped/metrics/: event_count.md  index.md
crates/localmind-store/tests/fixtures/okf/ga4-shaped/references/: index.md  joins.md
crates/localmind-store/tests/fixtures/okf/ga4-shaped/tables/: events.md  index.md  users.md
docs/: README.md  decisions.md  on-disk-contract.md  planning-handoff.md  research-distillation.md
docs/wiki/: Cross-Device-Sync.md  Examples.md  Getting-Started.md  Home.md  How-To.md  Reference.md  Troubleshooting.md  _Sidebar.md
docs/wiki/Examples/: Overview.md
docs/wiki/How-To/: Overview.md
tasks/: README.md
