[workspace]
members = [
    "crates/localmind-cli",
    "crates/localmind-core",
    "crates/localmind-mcp",
    "crates/localmind-review",
    "crates/localmind-search",
    "crates/localmind-skills",
    "crates/localmind-store",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["David <David@c0degeek.dev>", "Bram (C0deGeek.dev)"]
repository = "https://github.com/C0deGeek-dev/LocalMind"
homepage = "https://github.com/C0deGeek-dev/LocalMind"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "=1.0.95"
assert_cmd = "=2.0.16"
clap = { version = "=4.5.23", features = ["derive", "env"] }
regex = "=1.11.1"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.134"
tempfile = "=3.14.0"
thiserror = "=2.0.9"
time = { version = "=0.3.37", features = ["formatting", "parsing", "serde"] }
toml = "=0.8.23"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"
