[package]
name = "localmind-cli"
version = "2.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "localmind"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
localmind-core = { path = "../localmind-core" }
localmind-store = { path = "../localmind-store" }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
