[package]
name = "localmind-codegraph"
version = "2.1.5"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
localmind-core = { path = "../localmind-core" }
localmind-store = { path = "../localmind-store" }
serde = { workspace = true }
streaming-iterator = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-lua = { workspace = true }
tree-sitter-ocaml = { workspace = true }
tree-sitter-elixir = { workspace = true }
tree-sitter-powershell = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
