[package]
name = "localmind-core"
version = "2.1.5"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
