[package]
name = "localmind-mcp"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
localmind-core = { path = "../localmind-core" }
localmind-store = { path = "../localmind-store" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
