[package]
name = "localmind-search"
version = "0.2.0-beta.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
localmind-core = { path = "../localmind-core" }
localmind-store = { path = "../localmind-store" }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
localmind-codegraph = { path = "../localmind-codegraph" }
tempfile = { workspace = true }
