[package]
name = "localmind-store"
version = "2.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
localmind-core = { path = "../localmind-core" }
localmind-review = { path = "../localmind-review" }
localmind-inference = { path = "../localmind-inference" }
crypto_box = { version = "=0.9.1", features = ["seal"] }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
